<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/task"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="#0F7569"
            android:textStyle="bold|italic"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="#0F7569"
            android:textStyle="bold|italic"
            android:text="@string/score"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResultList"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#0F7569"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textColor="#FFFFFF"
        android:text="@string/back"/>

</LinearLayout>