<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="30dp"
        android:textStyle="bold|italic"
        android:text="@string/login"
        android:textColor="#0F7569"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnLogin"
        android:textStyle="bold|italic"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="100dp"
        android:background="#0F7569"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="180dp"
        android:text="@string/register" />

</FrameLayout>