<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SignUpFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/im_signup"
        android:src="@drawable/login"
        android:layout_width="159dp"
        android:layout_height="142dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="#0F7569"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/et_fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_signup" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fullname" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="131dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_fullname"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup" />

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="93dp"
        android:text="@string/back"
        android:textColor="#0F7569"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.296" />

</androidx.constraintlayout.widget.ConstraintLayout>
