<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.planningpoker.AddNewTasksFragment">

    <EditText
        android:id="@+id/et_add_new_task"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/addnewtask"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_new_task" />

    <TextView
        android:id="@+id/tv_add_new_task"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="36dp"
        android:text="@string/addnewtask"
        android:textColor="#0F7569"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="48dp"
        android:background="#0F7569"
        android:text="@string/add"
        android:textColor="#E8EEED"
        app:layout_constraintBottom_toTopOf="@+id/tv_back_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_new_task" />

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="124dp"
        android:text="@string/back"
        android:textColor="#0F7569"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
