<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.example.planningpoker.NewScoringFragment">


    <ImageView
        android:id="@+id/iv_scores"
        android:layout_width="159dp"
        android:layout_height="142dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="126dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_tasks"
        android:layout_width="307dp"
        android:layout_height="61dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:gravity="center"
        android:text="@string/addnewtask"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_scores" />

    <TextView
        android:id="@+id/tv_skips"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="#FEFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_numbers"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="114dp"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/colorGreen"
        android:textSize="90sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_skips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tasks" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="64dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="121dp"
        android:gravity="right"
        android:text="@string/rigth"
        android:textColor="@color/colorGreen"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_skips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_numbers"
        app:layout_constraintTop_toBottomOf="@+id/tv_tasks" />

    <TextView
        android:id="@+id/tv_prev"
        android:layout_width="64dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="121dp"
        android:text="Prev"
        android:textColor="@color/colorGreen"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_skips"
        app:layout_constraintEnd_toStartOf="@+id/tv_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tasks" />

</androidx.constraintlayout.widget.ConstraintLayout>
